# colink-protocol-remote-storage-dev

./: Cargo.toml  README.md  build.rs  colink.toml
.github/workflows/: build.yml
examples/: app.rs
proto/: remote_storage.proto
src/: main.rs
