[package]
name = "colink-protocol-remote-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
colink-sdk-a = { tag = "v0.1.5", git = "ssh://git@github.com/CoLearn-Dev/colink-sdk-a-rust-dev.git" }
colink-sdk-p = { tag = "v0.1.5", git = "ssh://git@github.com/CoLearn-Dev/colink-sdk-p-rust-dev.git" }
prost = "0.10"
regex = "1.5"
tokio = "1.18"
tracing = "0.1"
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
prost-build = "0.10"
